--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "buildDir": "dist",
   "cloudformation": false,
   "devDependencies": {
+    "ava": "^0.19.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-preset-env": "^1.4.0",
@@ -23,7 +24,8 @@
     "run:exporter": "lambda-local -l dist/exporter.js -e test/exporter.json -h handler -P ~/.aws/credentials -p membership -r eu-west-1 -t 10 -E {\\\"Stage\\\":\\\"CODE\\\"}",
     "run:querier": "lambda-local -l dist/querier.js -e test/querier.json -h handler -P ~/.aws/credentials -p membership -r eu-west-1 -t 10 -E {\\\"Stage\\\":\\\"CODE\\\"}",
     "run:fetcher": "lambda-local -l dist/fetcher.js -e test/fetcher.json -h handler -P ~/.aws/credentials -p membership -r eu-west-1 -t 10 -E {\\\"Stage\\\":\\\"CODE\\\"}",
-    "clean": "rm -rf dist && rm -rf target"
+    "clean": "rm -rf dist && rm -rf target",
+    "test":"ava"
   },
   "dependencies": {
     "fast-csv": "2.4.0",
